# qcor

.github/workflows/: docker-qcor-cli.yml
benchmarks/qcor-mlir/: qasm_to_qsharp.py  qcor_csp.cpp  qcor_mlir_compile.py  qcor_syntax_handler_compile.py  qiskit_compile.py  qsharp_compile.py  result_csp.csv  result_csp2021_01_14-09_46_39_PM.csv  result_csp2021_06_03-11_54_36_AM.csv  result_mlir.csv  result_mlir2021_01_14-07_51_36_PM.csv  result_mlir2021_06_03-11_59_42_AM.csv  result_qiskit2021_01_14-07_38_46_PM.csv  result_qsharp.csv
benchmarks/qcor-mlir/qsharp/: adder_8.qs  barenco_tof_10.qs  barenco_tof_3.qs  barenco_tof_4.qs  barenco_tof_5.qs  csla_mux_3.qs  csum_mux_9.qs  cycle_17_3.qs  gf2^10_mult.qs  gf2^128_mult.qs  gf2^16_mult.qs  gf2^256_mult.qs  gf2^32_mult.qs  grover_5.qs  (+32 more)
examples/: CMakeLists.txt
examples/mirror_validation/: log_honeywell  log_ibmqbogota  log_ibmqlima
examples/qpu_lambda/: lambda_multiple_bell.cpp
examples/qrt/: qaoa_demo.cpp
handlers/: qcor_syntax_handler.cpp
handlers/token_collector/: token_collector_util.cpp
lib/mirror_rb/: mirror_circuit_rb.cpp
mlir/qir_qrt/: qir-qrt.cpp  qir-qrt.hpp
mlir/tools/: CMakeLists.txt  qcor-mlir-tool.cpp
mlir/tools/azure/: CMakeLists.txt  azure-qir-tool.cpp  azure-utils.cpp  azure-utils.hpp
mlir/transforms/: CMakeLists.txt  pass_manager.hpp  quantum_to_llvm.cpp
python/tests/: test_kernel_ftqc.py  test_kernel_jit.py  test_openfermion_integration.py  test_qcor_spec_api.py  test_quasimo.py
runtime/: qcor.cpp  qcor.hpp
runtime/qrt/: qrt.cpp  qrt.hpp  qrt_mapper.hpp
tools/driver/: qcor.in
(+45 files in other folders)
